--- a/admin/adminDashboard.html
+++ b/admin/adminDashboard.html
@@ -97,7 +97,7 @@
             <tr class="bg-gray-50 text-gray-600">
                 <th class="p-2">ID</th>
                 <th class="p-2">Request ID</th>
-                <th class="p-2">Donor ID</th>
+                <th class="p-2">Donor Name</th>
                 <th class="p-2">Scheduled Time</th>
                 <th class="p-2">Action</th>
             </tr>
@@ -214,7 +214,7 @@
 async function loadPendingResponses() {
   const { data: responses, error } = await supabase
     .from('responses')
-    .select('id, request_id, donor_id')
+    .select('id, request_id, donor_id, donor_name')
     .eq('status', 'pending');
 
   if (error) {
@@ -238,7 +238,7 @@ async function loadPendingResponses() {
     row.innerHTML = `
       <td class="p-2">${res.id || "Unknown ID"}</td>
       <td class="p-2">${res.request_id || "No Request"}</td>
-      <td class="p-2">${res.donor_id || "No Donor"}</td>
+      <td class="p-2">${res.donor_name || "No Donor"}</td>
       <td class="p-2">
         <input type="datetime-local" id="${inputId}" class="border rounded p-1" />
       </td>
